# olympus-ai

./: .gitignore  BESTIARY.md  CHRONICLE.md  CONTRIBUTING.md  COSMOGONY.md  LICENSE  NOTICE  PANTHEON.md  PROPHECIES.md  README.md  RITES.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: drift_observed.md  new_arc_proposal.md
bestiary/: threats.md
codex/: AGENTS.md  ARC-QUEUE.md  ARCHITECTURE.md  BESTIARY.md  BUILDING.md  CHRONICLE.md  COSMOGONY.md  DOMAIN-TEMPLATE.md  FLOW.md  GEOMETRY.md  INTELLIGENCE.md  OPERATIONS.md  PANTHEON.md  PATTERNS.md  PLUGINS.md  QUICKSTART.md  RIGOR.md  SPECS.md  autonomy-architecture.md  cadences.md  cognitive-loop.md  constraint-lattice.md  devnotes-readme.md  gotchas.md  lineage.md  structural-architecture.md  style.md  substrate.md  threat-model.md
codex/journal/: 2026-05-18.md
codex/schemas/: action-ratified.schema.json  action-rejected.schema.json  atlas-bear.schema.json  (+4 more)
fates/: __init__.py  atropos.py  clotho.py  lachesis.py
furies/: __init__.py  alecto.py  megaera.py  tisiphone.py
graces/: __init__.py  aglaia.py  euphrosyne.py  thalia.py
heroes/: __init__.py  atalanta.py  momus.md  momus.py  odysseus.py  orpheus.py  perseus.py  theseus.py
monsters/: __init__.py  cerberus.py  chimera.py  medusa.py  typhon.py
muses/: __init__.py  calliope.py  clio.py  erato.py  euterpe.py  melpomene.py  polyhymnia.py  terpsichore.py  thalia_muse.py  urania.py
olympians/: __init__.py  aphrodite.py  ares.py  athena.py  demeter.py  dionysus.py  hephaestus.py  hera.py  hermes.py  hestia.py  zeus.py
oracles/: delphi-index.md  delphi-protocol.md
primordials/: __init__.py  chaos.py  eros.py  gaia.py  nyx.py  tartarus.py
scripts/: chat_world.py  invoke  loop.sh
tests/: conftest.py  test_action_queue.py  test_agents.py  test_agora.py  test_ananke.py  test_argos_eyes.py  test_ariadne.py  test_asclepius.py  test_atalanta_scale.py  test_atlas.py  test_cassandra.py  test_castor_pollux.py  test_centrality.py  test_charon.py  test_chronos.py  test_clio_narrative.py  test_config.py  test_correlation.py  test_daedalus.py  test_daedalus_svg.py  test_daemon.py  test_demeter_library.py  test_doctor.py  test_epimetheus.py  test_euterpe_consonance.py  test_federation_dialogue.py  test_grounding.py  test_hades.py  test_hecate_fib.py  test_hephaestus_pr.py  test_heracles_bench.py  test_heracles_labors.py  test_hippocrene.py  test_history_aware_athena.py  test_http_api.py  test_http_writechannel.py  test_hygieia.py  test_invariant_S1.py  test_invariant_S2.py  test_invariant_S3.py  (+47 more)
titans/: __init__.py  coeus.py  cronus.py  hyperion.py  mnemosyne.md  mnemosyne.py  oceanus.py  rhea.py  themis.py
underworld/: __init__.py  hades.py  hecate.py  persephone.py  styx.py
(+381 files in other folders)
