[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "olympus"
version = "0.1.0"
description = "A cognitive substrate for AI agents, organized as Greek mythology."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Egor Khaklin" }]
requires-python = ">=3.9"
keywords = ["cognitive-architecture", "agent", "mythology", "substrate"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/EgorKhaklin/olympus"
Documentation = "https://github.com/EgorKhaklin/olympus/tree/main/codex"

[project.scripts]
invoke = "olympus.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/olympus"]

[tool.hatch.build.targets.sdist]
include = ["src/olympus", "codex", "scripts", "tests", "README.md", "LICENSE", "NOTICE"]
