[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "olympus"
version = "0.1.0"
description = "A cognitive substrate for AI agents, organized as Greek mythology."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Egor Khaklin" }]
requires-python = ">=3.9"
keywords = ["cognitive-architecture", "agent", "mythology", "substrate"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/EgorKhaklin/olympus"
Documentation = "https://github.com/EgorKhaklin/olympus/tree/main/codex"

[project.scripts]
invoke = "olympus.cli:main"

# Plugin protocol (recursion arc). Third-party packages register
# additional handlers / eyes / healers / predictions via these
# entry-point groups. See codex/PLUGINS.md.
#
# Example consumer pyproject.toml:
#   [project.entry-points."olympus.prometheus_handlers"]
#   my_handler = "my_package.module:my_handler_fn"
#
#   [project.entry-points."olympus.asclepius_healers"]
#   my_healer = "my_package.module:my_healer_fn"
#
#   [project.entry-points."olympus.argos_eyes"]
#   my_eye = "my_package.module:MyEye"

[tool.hatch.build.targets.wheel]
packages = ["src/olympus"]

[tool.hatch.build.targets.sdist]
include = ["src/olympus", "codex", "scripts", "tests", "README.md", "LICENSE", "NOTICE"]
